--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- all other head tags must come after -->
 	<title>Instagram Collection</title>
 
 	<!-- SEO-->
@@ -18,7 +17,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
-	<!-- http://realfavicongenerator.net/ *individual favicon package must be created and extracted in "favicon"*-->
+	<!-- http://realfavicongenerator.net/-->
 	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png">
@@ -37,49 +36,89 @@
 	<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<!-- Include the AngularJS library -->
+	<!-- AngularJS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
+
+    <!-- Firebase -->
+	<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+
+	<!-- AngularFire -->
+	<script src="https://cdn.firebase.com/libs/angularfire/1.1.4/angularfire.min.js"></script>
 
 </head>
 <body>
-
-		<header>
-				<div id="logo">
-					<img src="img/instaheader_small.png" width="400">
-				</div>
-				<h1> #collection</h1>
-		</header>
+	<header>
+		<div id="logo">
+			<img src="img/instaheader_small.png" width="400">
+		</div>
+		<h1> #collection</h1>
+	</header>
 
 	<div ng-app="InstagramApp" ng-controller="MainController">
 
 		<div class="bar">
-			<input id="hashtag" value="kristinatestedinstaapi">
+			<label for="hashtag">#</label>
+			<input id="hashtag" name="hashtagInput" value="kristinatestedinstaapi" placeholder="# search for hashtag">
+
+			<!-- input fields for start and end date (default is year 2016)-->
+			<label for="fromDate">from</label>
+			<input type="text" id="fromDate" name="fromDate" ng-model="fromDate" placeholder="YYYY-MM-DD">
+			<label for="toDate">to</label>
+			<input type="text" id="toDate" name="toDate" ng-model="toDate" placeholder="YYYY-MM-DD">
+			<button id="search">GO</button>
+
+			<!-- click to see collection-->
+			<a class="collection-icon" ng-class="{active: layout == 'collection'}" ng-click="layout = 'collection'">
+			</a>
+
 			<!-- toggle between list and grid view -->
 			<a class="list-icon" ng-class="{active: layout == 'list'}" ng-click="layout = 'list'"></a>
 			<a class="grid-icon" ng-class="{active: layout == 'grid'}" ng-click="layout = 'grid'"></a>
 		</div>
 
-		<!-- grid layout showing iframes only -->
-		<ul ng-show="layout == 'grid'" class="grid">
+		<!-- collection data from firebase DOESNT WORK YET -->
+		<ul ng-show="layout == 'collection'" class="collection">
+
 			<li ng-repeat="data in instadata.data.data">
 				<a href="{{data.link}}" target="_blank">
-					<iframe ng-src="{{data.link | convertUrl}}" allowfullscreen frameborder="0" width="320" height="400px" scrolling="no" allowtransparency="true">
+					<iframe ng-src="{{data.link | convertUrl}}" frameborder="0" width="320" height="400px" scrolling="no" allowtransparency="true">
 					</iframe>
 				</a>
 			</li>
+			<button class="next btn-collection" ng-click="instadata.$remove()">clear</button>
+
+		</ul>
+
+		<!-- grid layout showing iframes only -->
+		<ul ng-show="layout == 'grid'" class="grid">
+			
+			<li ng-repeat="data in instadata.data.data | dateFilter:fromDate:toDate">
+				<a href="{{data.link}}" target="_blank">
+					<iframe ng-src="{{data.link | convertUrl}}" frameborder="0" width="320" height="400px" scrolling="no" allowtransparency="true">
+					</iframe>
+				</a>
+			</li>
+
+			<button class="next btn-grid" ng-click="nextPage()">...more</button>
+
 		</ul>
 
 		<!-- detailed list with caption and tag time -->
 		<ul ng-show="layout == 'list'" class="list">
-			<li ng-repeat="data in instadata.data.data">
+			
+			<li ng-repeat="data in instadata.data.data | dateFilter:fromDate:toDate">
 				<a href="{{data.link}}" target="_blank">
-					<iframe ng-src="{{data.link | convertUrl}}" allowfullscreen frameborder="0" width="320" height="400px" scrolling="no" allowtransparency="true">
+					<iframe ng-src="{{data.link | convertUrl}}" frameborder="0" width="320" height="400px" scrolling="no" allowtransparency="true">
 					</iframe>
+				</a>
 				<p>{{data.caption.text}}</p>
 				<p>tag time: {{data.created_time | convertUnix}}</p>
 				<p>comments: {{data.comments.count}}</p>
 				<p>{{data.comments.data}}</p>
 			</li>
+
+			<button class="next btn-list" ng-click="nextPage()">...more</button>
+
 		</ul>
 
 	</div>
@@ -100,7 +139,7 @@
     <script src="js/controllers/filter.js"></script>
 
     <!-- Services -->
-    <script src="js/services/instagram.js"></script>
+  
 
 </body>
 </html>
