--- a/index.html
+++ b/index.html
@@ -1,145 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Instagram Collection</title>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Instagram Collection</title>
 
-	<!-- SEO-->
-	<meta name="description" content="web app to view post on instragram using a hashtag and creation date">
-	<meta name="keywords" content="instagram, photo, collection, hashtag, webapp, front end, instagram api">
-	<meta name="author" content="Kristina Traeger">
+		<!-- SEO-->
+		<meta name="description" content="web app to view post on instragram using a hashtag and creation date">
+		<meta name="keywords" content="instagram, photo, collection, hashtag, webapp, front end, instagram api">
+		<meta name="author" content="Kristina Traeger">
 
+		<!-- Style sheets -->
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 
-	<!-- Style sheets -->
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+		<!-- http://realfavicongenerator.net/-->
+		<link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="favicon/android-chrome-192x192.png" sizes="192x192">
+		<link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96">
+		<link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16">
+		<link rel="manifest" href="favicon/manifest.json">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png">
+		<meta name="theme-color" content="#ffffff">
 
-	<!-- http://realfavicongenerator.net/-->
-	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-touch-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-touch-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon-180x180.png">
-	<link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="favicon/android-chrome-192x192.png" sizes="192x192">
-	<link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96">
-	<link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16">
-	<link rel="manifest" href="favicon/manifest.json">
-	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+		<!-- AngularJS -->
+	    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
 
-	<!-- AngularJS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
+	</head>
+	<body>
+		<header>
+			<div id="logo">
+				<img src="img/instaheader_small.png" width="400">
+			</div>
+			<h1> #collection</h1>
+		</header>
 
-    <!-- Firebase -->
-	<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+		<div ng-app="InstagramApp" ng-controller="MainController" ng-cloak>
+			<div class="bar">
+				<label for="hashtag">#</label>
+				<input id="hashtag" name="hashtagInput" value="kristinatestedinstaapi" placeholder="search for hashtag">
 
-	<!-- AngularFire -->
-	<script src="https://cdn.firebase.com/libs/angularfire/1.1.4/angularfire.min.js"></script>
+				<!-- input fields for start and end date (default is year 2016)-->
+				<label for="fromDate">from</label>
+				<input type="text" id="fromDate" name="fromDate" ng-model="fromDate" ng-model-options="{
+                       updateOn: 'click'
+                   }" placeholder="YYYY-MM-DD">
+				<label for="toDate">to</label>
+				<input type="text" id="toDate" name="toDate" ng-model="toDate" ng-model-options="{
+                       updateOn: 'click'
+                   }" placeholder="YYYY-MM-DD">
+				<button id="search" ng-model="searchView">GO</button>
 
-</head>
-<body>
-	<header>
-		<div id="logo">
-			<img src="img/instaheader_small.png" width="400">
+				<!-- toggle between list and collection-->
+				<a class="list-icon" ng-class="{active: layout == 'list'}" ng-click="layout = 'list'"></a>
+				<a class="collection-icon" ng-class="{active: layout == 'collection'}" ng-click="layout = 'collection'">
+				</a>
+
+			</div>
+
+			<div id="welcome" ng-hide="searchView || layout == 'collection' || layout == 'list'">
+				<h4 ng-hide="searchView">create your own instagram #collection</h4>
+				<p class="search-header" ng-hide="searchView">search for hashtags within a certain timeframe and add all the photos you love to your own instragram #collection!</p>
+				<p class="search-header" ng-hide="searchView">Press enter / hit GO to get started.</p>
+			</div>
+
+			<!-- collection view from firebase-->
+			<ul ng-show="layout == 'collection'" class="collection">
+				<h4>your #collected search items</h4>
+				<p class="search-header" ng-hide="searchView">no items added to your #collection yet! start searching photos on instagram and type in a hashtag in the input field above.</p>
+				<div ng-repeat="data in fbdata" class="collection-search">
+					<div class="info-header">
+						<div ng-repeat="info in data" > 
+						<!-- bug: info == null when loaded w/o window load -->
+							<div id="fromColl" class="info-coll" ng-hide="info.to == null">from: {{ info.from}}</div>
+							<div id="toColl" class="info-coll" ng-hide="info.to == null">to: {{ info.to}}</div>
+							<div id="hashColl" class="info-coll" ng-hide="info.hashtag == null">hashtag: {{ info.hashtag}}</div>
+						</div>
+						<div>
+							<button class="btn-delete" ng-click="fbdata.$remove(data)">delete search</button>
+						</div>
+					</div>
+					<li ng-repeat="post in data" ng-if="post.link != null">
+						<a href="{{post.link}}" target="_blank">
+							<iframe ng-src="{{post.link | convertUrl}}" frameborder="0" width="320" height="400px" scrolling="no" allowtransparency="true">
+							</iframe>
+						</a>
+					</li>			
+				</div>
+			</ul>
+
+			<!-- grid layout DEPRECIATED to not be confused with collection view -->
+			<!-- <ul ng-show="layout == 'grid'" class="grid">	
+				<li ng-repeat="data in instadata.data.data | dateFilter:fromDate:toDate">
+					<a href="{{data.link}}" target="_blank">
+						<iframe ng-src="{{data.link | convertUrl}}" frameborder="0" width="320" height="400px" scrolling="no" allowtransparency="true">
+						</iframe>
+					</a>
+				</li>
+				<button class="next btn-grid" ng-click="nextPage()">...more</button>
+			</ul> -->
+
+			<!-- list view with caption and tag time -->
+			<ul ng-show="layout == 'list'" class="list">
+				<h4>your current search items</h4>
+				<p class="search-header" ng-show="searchView">if you like what you see, add all items to your #collection!</p>
+				<p class="search-header" ng-hide="searchView">no items to display! start searching photos on instagram and type in a hashtag in the input field above. if you like what you see, add photos to your personal #collection!</p>
+				<button id="add" ng-click="addData()" class="btn-add search-header" ng-show="searchView">add search</button>		
+				<li ng-repeat="data in instadata.data.data | dateFilter:fromDate:toDate">
+					<a href="{{data.link}}" target="_blank">
+						<iframe ng-src="{{data.link | convertUrl}}" frameborder="0" width="320" height="400px" scrolling="no" allowtransparency="true">
+						</iframe>
+					</a>
+					<p>{{data.caption.text}}</p>
+					<p>tag time: {{data.created_time | convertUnix}}</p>
+				</li>
+				<button class="next btn-list" ng-show="searchView" ng-click="nextPage()">...more</button>
+			</ul>
+
 		</div>
-		<h1> #collection</h1>
-	</header>
 
-	<div ng-app="InstagramApp" ng-controller="MainController">
+		<!-- jQuery-->
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-		<div class="bar">
-			<label for="hashtag">#</label>
-			<input id="hashtag" name="hashtagInput" value="kristinatestedinstaapi" placeholder="# search for hashtag">
+	    <!-- Firebase -->
+		<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
 
-			<!-- input fields for start and end date (default is year 2016)-->
-			<label for="fromDate">from</label>
-			<input type="text" id="fromDate" name="fromDate" ng-model="fromDate" placeholder="YYYY-MM-DD">
-			<label for="toDate">to</label>
-			<input type="text" id="toDate" name="toDate" ng-model="toDate" placeholder="YYYY-MM-DD">
-			<button id="search">GO</button>
+		<!-- AngularFire -->
+		<script src="https://cdn.firebase.com/libs/angularfire/1.1.4/angularfire.min.js"></script>
+	   
+		<!-- individual files-->
+		<script src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
 
-			<!-- click to see collection-->
-			<a class="collection-icon" ng-class="{active: layout == 'collection'}" ng-click="layout = 'collection'">
-			</a>
+		<!-- Modules -->
+	    <script src="js/app.js"></script>
 
-			<!-- toggle between list and grid view -->
-			<a class="list-icon" ng-class="{active: layout == 'list'}" ng-click="layout = 'list'"></a>
-			<a class="grid-icon" ng-class="{active: layout == 'grid'}" ng-click="layout = 'grid'"></a>
-		</div>
+	    <!-- Controllers-->
+	    <script src="js/controllers/MainController.js"></script>
+	    <script src="js/controllers/filter.js"></script>
 
-		<!-- collection data from firebase DOESNT WORK YET -->
-		<ul ng-show="layout == 'collection'" class="collection">
-
-			<li ng-repeat="data in instadata.data.data">
-				<a href="{{data.link}}" target="_blank">
-					<iframe ng-src="{{data.link | convertUrl}}" frameborder="0" width="320" height="400px" scrolling="no" allowtransparency="true">
-					</iframe>
-				</a>
-			</li>
-			<button class="next btn-collection" ng-click="instadata.$remove()">clear</button>
-
-		</ul>
-
-		<!-- grid layout showing iframes only -->
-		<ul ng-show="layout == 'grid'" class="grid">
-			
-			<li ng-repeat="data in instadata.data.data | dateFilter:fromDate:toDate">
-				<a href="{{data.link}}" target="_blank">
-					<iframe ng-src="{{data.link | convertUrl}}" frameborder="0" width="320" height="400px" scrolling="no" allowtransparency="true">
-					</iframe>
-				</a>
-			</li>
-
-			<button class="next btn-grid" ng-click="nextPage()">...more</button>
-
-		</ul>
-
-		<!-- detailed list with caption and tag time -->
-		<ul ng-show="layout == 'list'" class="list">
-			
-			<li ng-repeat="data in instadata.data.data | dateFilter:fromDate:toDate">
-				<a href="{{data.link}}" target="_blank">
-					<iframe ng-src="{{data.link | convertUrl}}" frameborder="0" width="320" height="400px" scrolling="no" allowtransparency="true">
-					</iframe>
-				</a>
-				<p>{{data.caption.text}}</p>
-				<p>tag time: {{data.created_time | convertUnix}}</p>
-				<p>comments: {{data.comments.count}}</p>
-				<p>{{data.comments.data}}</p>
-			</li>
-
-			<button class="next btn-list" ng-click="nextPage()">...more</button>
-
-		</ul>
-
-	</div>
-
-
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-   
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
-
-	<!-- Modules -->
-    <script src="js/app.js"></script>
-
-    <!-- Controllers-->
-    <script src="js/controllers/MainController.js"></script>
-    <script src="js/controllers/filter.js"></script>
-
-    <!-- Services -->
-  
-
-</body>
+	</body>
 </html>
